# DispatchArena

./: .gitignore
dispatch_arena/: .openenvignore  Dockerfile  README.md  __init__.py  blog.md  blog_new.md  client.py  dispatch_arena_colab.ipynb  models.py  openenv.yaml  pyproject.toml
dispatch_arena/catalog/: __init__.py  anchors.py  builder.py  catalog.json  dataset.py  prompts.py  spec.py
dispatch_arena/dispatch_arena/: __init__.py  client.py  models.py
dispatch_arena/dispatch_arena/server/: __init__.py  api.py  app.py  env.py  metrics.py  replay_store.py  rewards.py  scenarios.py  serializers.py
dispatch_arena/docs/: SPEC.md
dispatch_arena/frontend/: index.html  package-lock.json  package.json
dispatch_arena/frontend/src/: App.jsx  App.legacy.jsx  components.jsx  fixtures.js  styles.css  styles.legacy.css
dispatch_arena/scripts/: README.md  build_catalog.py  demo_client_episode.py  evaluate_catalog.py  inspect_env.py  inspect_generation.py  train_grpo.py  train_grpo_smoke.py
dispatch_arena/server/: __init__.py  andheri_api.py  andheri_graph.py  andheri_simulator.py  api.py  app.py  env.py  metrics.py  replay_store.py  rewards.py  scenarios.py  serializers.py
dispatch_arena/server/static/: index.html
dispatch_arena/server/static/assets/: index-00197099.css  index-0506209f.css  index-1136c676.js  index-5607b1e3.js
dispatch_arena/tests/: test_andheri_api.py  test_andheri_simulator.py  test_environment.py  test_models.py  test_server_client.py
