[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dispatch-arena"
version = "0.1.0"
description = "Dispatch Arena OpenEnv simulation benchmark"
readme = "README.md"
requires-python = ">=3.10,<3.13"
authors = [{ name = "Dispatch Arena Maintainers" }]
dependencies = [
  "fastapi>=0.110.0",
  "httpx>=0.27.0",
  "openenv-core>=0.2.0",
  "pydantic>=2.0.0",
  "uvicorn[standard]>=0.29.0",
]

[project.scripts]
server = "dispatch_arena.server.app:main"
dispatch-arena-server = "dispatch_arena.server.app:main"

[project.entry-points."openenv.environments"]
dispatch_arena = "dispatch_arena.server.app:create_app"

[tool.setuptools]
include-package-data = true
packages = ["dispatch_arena", "dispatch_arena.server"]

[tool.setuptools.package-dir]
"dispatch_arena" = "."

[tool.setuptools.package-data]
"dispatch_arena.server" = ["static/*"]

[tool.uv]
managed = true
